# msgrelay

./: README.md  pyproject.toml
echomod_msgrelay/: __init__.py  config.py  core.py  models.py  relay.py
echomod_msgrelay/msgformat/: __init__.py  _base.py  discord.py
